# rakupp

./: .gitignore  .tmp-test-file  ARCHITECTURE.md  ASYNC.md  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CONFORMANCE.md  COOKBOOK.md  COUNTING.md  DOGFOODING.md  EXAMPLES.md  FEATURES.md  GUIDE.md  JOURNEY.md  LONGREAD.md  METAPROGRAMMING.md  NATIVE.md  OPTIMIZATION.md  OVERVIEW.md  README.md  ROADMAP.md  ROAST.md  UNICODE.md  c.raku  c1.cpp  c2.cpp
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  ASYNC.md  BENCHMARKS.md  COMPILERS.md  CONFORMANCE.md  COOKBOOK.md  COUNTING.md  DOGFOODING.md  ECOSYSTEM.md  FEATURES.md  GUIDE.md  HIGHLIGHTS.md  HTTPS.md  JOURNEY.md  LINT.md  MEMORY.md  METAPROGRAMMING.md  MILESTONES.md  MODULES.md  NATIVE.md  NETWORKING.md  NQP.md  OPTIMIZATION.md  OVERVIEW.md  PARSING.md  PLAN-gil-removal.md  README.md  REFERENCE.md  ROADMAP.md  ROAST-GAPS.md  ROAST.md  ROSETTACODE.md  RUNTIME.md  TRIAGE.md  UNICODE.md
docs/dev/: 100.md  BUGS-JS-SHOWCASE.md  BUGS.md  CORPUS-DIFF.md  COURSE-DIVERGENCES.md  COURSE-PLAY-BUTTONS.md  DISPATCH.md  ECOSYSTEM-TOP50.md  JOURNEY.md  MANDEL.md  MODULE-FINDINGS.md  PWC-DIVERGENCES.md  REVIEW-1.0.md  ROAST-GAPS.md  SPEC-DIVERGENCES.md  TRIAGE.md  V2-MODULES-PLAN.md
examples/: README.md  anagrams.raku  brainfuck.raku  calculator.raku  cipher.raku  echo-server.raku  factorize.raku  fibonacci.raku  hanoi.raku  json.raku  life.raku  mandel.raku  matrix.raku  nqueens.raku  parallel.raku  pascal.raku  primes.raku  quicksort.raku  rationals.raku  roman.raku  rpn.raku  sierpinski.raku  sleep-sort.raku  wordcount.raku
examples/lint/: README.md  clean.raku  constant-condition.raku  kitchen-sink.raku  new-arg-matches-no-attribute.raku  numeric-cmp-of-string.raku  redeclaration.raku  redundant-return.raku  self-assignment.raku  unreachable-code.raku  unused-parameter.raku  unused-routine.raku  unused-variable.raku
history/: CONFORMANCE.md  JOURNEY.md  README.md
packaging/: README.md  rakupp.rb
presentation/: README.md  index.html
rakujs/: .gitignore  README.md  STACKED-INTERPRETERS.md  TUTORIAL.md  bench-runtime.cjs  bench.js  build.sh  deploy.sh  gen-examples.raku  rakupp_web.cpp
rakujs/playground/: index.html  worker.js
rakulib/: DBIish.rakumod
showcase/: README.md
showcase/chat/: README.md  chat.raku
showcase/forth/: README.md  forth.raku
showcase/js/: ASI.md  README.md  js.raku
showcase/json/: README.md  json.raku  sample.json
showcase/kvstore/: README.md  kvstore.raku
showcase/lisp/: README.md  lisp.raku
showcase/markdown/: README.md  md2html.raku  sample.md
showcase/pastebin/: README.md  pastebin.raku
showcase/perl/: README.md  perl.raku
showcase/python/: README.md  python.raku
showcase/rakus/: README.md  rakus.raku
showcase/web/: .gitignore  README.md  bundle.sh  index.html  json.html  markdown.html  regex.html  runner.js  serve.sh  worker.js
src/: Ast.h  AstDump.cpp  AstEmit.cpp  BigInt.cpp  BigInt.h  Builtins.cpp  Codegen.cpp  Codegen.h  Highlight.cpp  Highlight.h  IOSpec.cpp  IntOps.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Lint.cpp  Lint.h  Parser.cpp  Parser.h  Platform.h  Pod.cpp  Pod.h  Regex.cpp  Regex.h  Runtime.cpp  Runtime.h  Token.h  Unicode.cpp  Unicode.h  Value.cpp  Value.h  main.cpp  unicode_bidi_gen.cpp  unicode_blocks_gen.cpp  unicode_case_gen.cpp  unicode_coll_gen.cpp  unicode_gb_gen.cpp  unicode_gen.cpp  unicode_names.cpp  (+4 more)
t/: README.md  run.raku
t/expected/: anagrams.out  calculator.out  cipher.out  echo-server.out  factorize.out  fibonacci.out  forth-demo.out  hanoi.out  json-sample.out  json.out  lisp-features.out  mandel.out  markdown-sample.out  matrix.out  nqueens.out  parallel.out  pascal.out  primes.out  quicksort.out  quine.out  rationals.out  roman.out  rpn.out  sleep-sort.out  wordcount.out
t/fixtures/: StubbedRole.rakumod  chat-client.raku  lisp-features.scm  native-parity.raku
tools/: dispatch-bench.cpp  gen-unicode.raku  gen_unicode.py  gen_unicode_bidi.py  gen_unicode_blocks.py  gen_unicode_case.raku  gen_unicode_coll.py  gen_unicode_gb.py  gen_unicode_norm.py  gen_unicode_props.py  gen_unicode_props2.raku  gen_unicode_scripts.py  mingw-toolchain.cmake  perf-guard.raku  rc-compare.raku  run-bench.raku  run-optbench.raku  run-roast.raku  smoke.raku
(+130 files in other folders)
